--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,15 +23,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        <activity
-            android:name=".Question1"
-            android:label="@string/title_activity_question1" >
 
-        </activity>
-        <activity
-            android:name=".Question2"
-            android:label="@string/title_activity_question2" >
-        </activity>
         <activity
             android:name=".Finish"
             android:label="@string/title_activity_finish" >
@@ -67,19 +59,15 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Question1_Slider"
+            android:name=".Questions_Slider"
             android:label="@string/app_name">
 
         </activity>
 
         <activity
-            android:name=".Questions"
+            android:name=".Questions_MultChoice"
             android:label="@string/app_name">
 
-        </activity>
-        <activity
-            android:name=".ChangeSettings"
-            android:theme="@android:style/Theme.Holo.Light.Dialog" >
         </activity>
 
         <service android:name="com.parse.PushService" />
@@ -109,15 +97,6 @@
                 <action android:name="com.parse.push.intent.DELETE" />
             </intent-filter>
         </receiver>
-
-        <activity
-            android:name=".Question3"
-            android:label="@string/title_activity_question3" >
-        </activity>
-        <activity
-            android:name=".Question4"
-            android:label="@string/title_activity_question4" >
-        </activity>
     </application>
 
 </manifest>
